Email templates for validation includes settables

--- a/mailtemplates/activation_template2.html
+++ b/mailtemplates/activation_template2.html
@@ -51,7 +51,7 @@ llapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica,=
 apse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;
 ">
                 <div align="center" id="headline">
-                    <a href="http://thearchway.org" target="_blank"><singleline label="Title"><img src="thearchway.org/images/archwaylogo_no_rectangles.png" alt="archway.png" style="outline: none;text-decoration:none;display: block" /></singleline></a></div>
+                    <a href="http://thearchway.org" target="_blank"><singleline label="Title"><img src="http://thearchway.org/images/archwaylogo_no_rectangles.png" width="30%" height= "30%" alt="/images/archwaylogo_no_rectangles.png" style="outline: none;text-decoration:none;display: block" /></singleline></a></div>
             </td>
             <td class="w30" width="30" style="border-collapse: collap=
 se;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;">
@@ -115,7 +115,7 @@ llapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica,=
 apse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;=
 ">
                 <div align="center" id="headline">
-                    <singleline label="footer"><img src="http://thearchway.org/favicon.ico" alt="email_footer.png" style="outline: none;text-decoration: none;display: block" /></singleline></div>
+                    <singleline label="footer"></singleline></div>
             </td>
             <td class="w30" width="30" style="border-collapse: collap=
 se;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;">
@@ -144,7 +144,7 @@ ca, sans-serif;">
 ter" class="footer-content-left" style="-webkit-text-s
 ize-adjust: none;=
 -ms-text-size-adjust: none;font-size: 11px;line-height: 15px;color: #888;ma=
-rgin-top: 0;margin-bottom: 3px;white-space: normal"><span>The Archway 2015</span
+rgin-top: 0;margin-bottom: 3px;white-space: normal"><span>The Archway 2015<br>support@thearchway.org</span
 ></p></span>
  
             </td>
