Enlarged mail confirmation email images

--- a/mailtemplates/activation_template2.html
+++ b/mailtemplates/activation_template2.html
@@ -41,36 +41,17 @@ id="header" class="w640" width="640" align="center" bgcolor="#EFF0F2" style="bor
 
 
 <table class="w640" width="640" cellpadding="0" cellspacing="0"
- border="0"><tbody><tr style="border-collapse: collapse"><td class="w
-30" width="30" style="border-collapse: collapse;font-family: &quot;Helv=
-etica Neue&quot;, Arial, Helvetica, sans-serif;"></td><td class="w580" width="580" height="30" style="border-collapse: collapse;font-family: &=
-quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;"></td><td class="w30" width="30" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;"></td></tr><tr style="border-collapse: collapse"><td class="w30" width="30" style="border-co=
-llapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica,=
- sans-serif;"></td>
-            <td class="w580" width="580" style="border-collapse: coll=
-apse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;
+ border="0"><tbody><tr style="border-collapse: collapse"><td class="w30" width="30" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;"></td><td class="w580" width="580" height="30" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;"></td><td class="w30" width="30" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;"></td></tr><tr style="border-collapse: collapse"><td class="w30" width="30" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica,sans-serif;"></td>
+            <td class="w580" width="580" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;
 ">
                 <div align="center" id="headline">
                     <a href="http://thearchway.org" target="_blank"><singleline label="Title"><img src="http://thearchway.org/images/archwaylogo_no_rectangles.png" width="30%" height= "30%" alt="/images/archwaylogo_no_rectangles.png" style="outline: none;text-decoration:none;display: block" /></singleline></a></div>
             </td>
-            <td class="w30" width="30" style="border-collapse: collap=
-se;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;">
+            <td class="w30" width="30" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;">
 </td>
-        </tr><tr style="border-collapse: collapse"><td class="w30" width="30" style="border-collapse: collapse;font-family: &quot;Helvetica Ne=
-ue&quot;, Arial, Helvetica, sans-serif;"></td><td class="w580" width="580" height="30" style="border-collapse: collapse;font-family: &quot;Hel=
-vetica Neue&quot;, Arial, Helvetica, sans-serif;"></td><td class="w30" wi=
-dth="30" style="border-collapse: collapse;font-family: &quot;Helvetica =
-Neue&quot;, Arial, Helvetica, sans-serif;"></td></tr></tbody></table></td>
-                </tr><tr style="border-collapse: collapse"><td class="w=
-640" width="640" height="30" bgcolor="#ffffff" style="border-collap=
-se: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, san=
-s-serif;"></td></tr><tr id="simple-content-row" style="border-collapse:=
- collapse"><td class="w640" width="640" bgcolor="#ffffff" style="bo=
-rder-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Hel=
-vetica, sans-serif;">
-    <table class="w640" width="640" cellpadding="0" cellspacing="0"=
- border="0"><tbody><tr style="border-collapse: collapse"><td class="w=
-30" width="30" style="border-collapse: collapse;font-family: &quot;Helv=
+        </tr><tr style="border-collapse: collapse"><td class="w30" width="30" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;"></td><td class="w580" width="580" height="30" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;"></td><td class="w30" width="30" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;"></td></tr></tbody></table></td>
+                </tr><tr style="border-collapse: collapse"><td class="w640" width="640" height="30" bgcolor="#ffffff" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;"></td></tr><tr id="simple-content-row" style="border-collapse:collapse"><td class="w640" width="640" bgcolor="#ffffff" style="border-collapse: collapse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;">
+    <table class="w640" width="640" cellpadding="0" cellspacing="0" border="0"><tbody><tr style="border-collapse: collapse"><td class="w30" width="30" style="border-collapse: collapse;font-family: &quot;Helv=
 etica Neue&quot;, Arial, Helvetica, sans-serif;"></td>
             <td class="w580" width="580" style="border-collapse: coll=
 apse;font-family: &quot;Helvetica Neue&quot;, Arial, Helvetica, sans-serif;=
